--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
-  text-align: center;
+  display: grid;
+  grid-template-columns: 20vw auto;
+  grid-template-rows: 10vh auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.AppHeader {
+  grid-column: 1 2;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  grid-row-start: 2;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
-
-.App-link {
-  color: #61dafb;
+nav ul li {
+  text-overflow: ellipsis;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+main {
+  grid-row-start: 2;
+  grid-column-start: 2;
 }
