--- a/src/PostEl.css
+++ b/src/PostEl.css
@@ -1,7 +1,10 @@
 .post-wrapper {
     padding: 2em;
     margin: 1em;
-    width: 40vw;
+    width: fit-content;
+    border: 1px solid #808080;
+    border-radius: 5px;
+    overflow: auto;
 }
 
 .post-wrapper input {
@@ -10,4 +13,19 @@
 
 .post-wrapper textarea {
     width: 100%;
+}
+
+label {
+    font-size: small;
+}
+
+input, textarea, button {
+    padding: .5rem;
+    border: 2px solid grey;
+    border-radius: 5px;
+    margin-bottom: 1em;
+}
+
+button[type="submit"] {
+    float: right;
 }
